--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "guess-the-numv1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Cadenono.github.io/guess-the0number",
+  "homepage": "https://Cadenono.github.io/guess-the-number",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -17,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "react-scripts build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
